# python-outbox

./: LICENSE  README.md  README.rst  conftest.py  pyproject.toml
.github/workflows/: python-app.yml
python_outbox/base/: mapper.py  producer.py  publisher.py  runner.py  source.py  storage_box.py  type.py
python_outbox/generic/: mapper.py  producer.py  publisher.py  runner.py
python_outbox/sqlalchemy_outbox/: sqlalchemy_base.py  sqlalchemy_mapper.py  sqlalchemy_producer.py  sqlalchemy_source.py  sqlalchemy_storage_box.py
tests/: test_python_outbox.py
tests/generics/: test_mapper.py  test_producer.py  test_publisher.py  test_runner.py
tests/sqlalchemy_outbox/: test_mapper.py  test_producer.py  test_storage_box.py
