[tool.poetry]
name = "python-outbox"
version = "0.1.0"
description = ""
authors = ["Sami Tahri <sismixx@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.40"
SQLAlchemy-Utils = "^0.38.3"
pydantic = "^1.10.2"
psycopg2 = "^2.9.3"
black = "^22.8.0"
cloudevents = "^1.6.1"


[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
mypy = "^0.971"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.40"}
pylint = "^2.15.0"
datamodel-code-generator = {extras = ["http"], version = "^0.13.1"}
responses = "^0.21.0"
deepdiff = "^5.8.1"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
