[tool.poetry]
name = "python-outbox"
version = "0.1.0"
description = "Implement the outbox pattern in a generic way for python projects."
authors = ["Sami Tahri <sismixx@hotmail.fr>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Smixi/python-outbox"
repository = "https://github.com/Smixi/python-outbox"
keywords = ["events", "outbox-pattern", "event-driven"]
classifiers = [ "Topic :: Software Development :: Libraries :: Python Modules" ]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Smixi/python-outbox/issues"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.40"
SQLAlchemy-Utils = "^0.38.3"
pydantic = "^1.10.2"
black = "^22.8.0"
cloudevents = "^1.6.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
mypy = "^0.971"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.40"}
pylint = "^2.15.0"
datamodel-code-generator = {extras = ["http"], version = "^0.13.1"}
responses = "^0.21.0"
deepdiff = "^5.8.1"
flake8 = "^5.0.4"
Flake8-pyproject = "^1.1.0"
psycopg2 = "^2.9.3"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.flake8]
max-line-length = 127

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
